<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.register.RegisterFragment">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:text="Registration"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="6dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        android:layout_margin="10dp"
        android:layout_width="350dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPassword"
        app:layout_constraintTop_toBottomOf="@id/tvEmailAddress"
        app:layout_constraintStart_toStartOf="@id/tvEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/tvEmailAddress"
        android:layout_margin="10dp"
        android:layout_width="350dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="@id/tvPassword"
        app:layout_constraintEnd_toEndOf="@id/tvPassword"
        android:layout_margin="10dp"
        android:layout_width="350dp"
        android:maxLength="10"
        android:maxLines="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/termsLayout"
        app:layout_constraintEnd_toEndOf="@id/tvConfirmPassword"
        app:layout_constraintStart_toStartOf="@id/tvConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            ></CheckBox>
        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTerms"
            android:text="@string/i_agree_to_the_terms_and_conditions" />
    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="7dp"
        android:text="@string/register"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/tvConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/tvConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/termsLayout" />
    <LinearLayout
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DoNotHaveAnAccount"
            android:padding="5dp"
            android:text="@string/already_have_an_account"/>
        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLogin"
            android:text="@string/login"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>